# mma-fight-predictor

./: .env.example  .gitignore  AGENT_ARCHITECTURE.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATA_SOURCES.md  DEPLOYMENT.md  Dockerfile  LICENSE  LIVE_FEEDS.md  LOCAL_SETUP.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
app/: __init__.py  auth.py  bout_history.py  card_analyzer.py  career_curve.py  config.py  current_fights.py  data_jobs.py  database.py  fight_tree.py  fighters.py  main.py  matchup_context.py  media.py  models.py  odds_sites.py  rankings.py  sentiment.py  social.py  weight_classes.py
scripts/: audit_fight_history_freshness.py  backtest_model.py  discover_social_links.py  import_balldontlie_fights.py  import_data.py  import_fight_results.py  import_fighter_media.py  import_social_links.py  import_ufcstats_features.py  import_wikidata_instagram.py  migrate_sqlite_to_postgres.py  promote_profiles.py  run_import_worker.py  setup_local.ps1  setup_local.sh  train_model.py  train_model_from_db.py
tests/: test_app.py  test_balldontlie_fights_import.py  test_bout_history.py  test_card_analyzer.py  test_career_curve.py  test_current_fights.py  test_data_jobs.py  test_fight_history_audit.py  test_ingestion.py  test_matchup_context.py  test_odds_sites.py  test_prediction_agent.py  test_rankings.py  test_sentiment.py  test_social.py  test_social_discovery.py  test_social_import.py  test_training.py  test_ufcstats_import.py
(+39 files in other folders)
