[project]
name = "mma-fight-predictor"
version = "0.1.0"
description = "A Dockerized FastAPI web app for authenticated MMA fight winner analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "MMA Fight Predictor Contributors" }
]
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "jinja2==3.1.5",
  "python-multipart==0.0.20",
  "itsdangerous==2.2.0",
  "sqlalchemy==2.0.36",
  "pydantic-settings==2.7.1",
  "psycopg[binary]==3.2.3",
  "pandas==2.2.3",
  "scikit-learn==1.6.0",
  "joblib==1.4.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "httpx==0.28.1",
  "ruff==0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["storage*", "tests*"]
